[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Daniel Hnyk <hnykda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
typer = "^0.4.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
